--- a/analysis/preprocessing.qmd
+++ b/analysis/preprocessing.qmd
@@ -239,18 +239,6 @@ g1<-ggplot(R_studies,aes(x=values,fill=citekey,color=dimension))+
 
 g1
 ```
-## Check studies included
-
-```{r}
-#| eval: false
-included_in_summary <- R_summary$citekey[R_summary$dimension=='arousal']
-
-included_originally <- unique(metaMER_results$citekey[metaMER_results$model_category=='regression'])
-
-included_originally[!included_originally %in% included_in_summary]
-
-```
-
 ## Select a summary measure for valence and arousal separately
 
 ```{r}
@@ -323,10 +311,16 @@ R_studies$feature_n[R_studies$feature_n==" before_selection = 45, after_selectio
 R_studies$feature_n[R_studies$feature_n==" model 1: 52, model 2 = 68, model 3 = 260, model 4 = 388 "] <- 388 #resolved
 R_studies$feature_n[R_studies$feature_n==" variable, 557 before feature selection "] <- 557 #resolved
 
-R_studies$feature_n[R_studies$feature_n==" 50 PCA features "] <- 50 #resolved
-#R_studies$feature_n[R_studies$feature_n==""] <- 0 #resolved
-#R_studies$feature_n[R_studies$feature_n==""] <- 0 #resolved
+R_studies$feature_n[R_studies$feature_n==" 50 PCA features "] <- 499 #resolved
 
+R_studies$feature_n[str_detect(R_studies$feature_n,'pre_fitting = 21')] <- 21
+R_studies$feature_n[str_detect(R_studies$feature_n,'548 dimensions')] <- 548
+R_studies$feature_n[str_detect(R_studies$feature_n,'548; after reduct')] <- 548
+R_studies$feature_n[str_detect(R_studies$feature_n,'60 handcrafted and filter bank')] <- 3600
+R_studies$feature_n[str_detect(R_studies$feature_n,'Features deep-learned from audio (not specified) but 1802 in DEAM')] <- 260
+
+R_studies$feature_n[str_detect(R_studies$feature_n,'not specified')] <- 3000 # under-estimation based openSmile features and the paper arguing that they have 15 stat moments
+  
 R_studies$feature_n<-as.numeric(R_studies$feature_n)
 
 print(quantile(R_studies$feature_n,c(0.333,0.666),na.rm = T))
@@ -337,8 +331,16 @@ R_studies$feature_n_complexity <- cut(R_studies$feature_n,
                                       breaks = c(0,
                                                  as.numeric(quantile(R_studies$feature_n,c(0.333),na.rm = T)),
                                                  as.numeric(quantile(R_studies$feature_n,c(0.666),na.rm = T)),
-                                                 1000),
-                                      labels = c("Feature n < 130","Feature n > 130 & < 653","Feature n > 653"))
+                                                 10000),
+                                      labels = c("Feature n < 236","Feature n > 236 & < 653","Feature n > 653"))
+
+
+R_studies$feature_n_complexity <- cut(R_studies$feature_n,
+                                      breaks = c(0,30,300,10000),
+                                      labels = c("Feature n < 30","Feature n > 30 & < 300","Feature n > 300"))
+
+
+
 table(R_studies$feature_n_complexity)
 ```
 
@@ -357,14 +359,14 @@ tmp$model_class_id<-factor(tmp$model_class_id,
                            levels = c("Neural Nets","Flexible Discriminants", "Kernel Smoothing, Additive and KNN", "Random Forests","Linear Methods"),
                            labels = c("Neural\nNets","Flexible\nDiscriminants", "KS\n & KNN", "Random\nForests", "Linear\nMethods"))
 
-g <- ggplot(tmp,aes(x=model_class_id,y=values,color=citekey,label=citekey))+
+g <- ggplot(tmp,aes(x=model_class_id,y=values,color=citekey,label=citekey,shape=stimulus_genre_mixed))+
   stat_halfeye(aes(fill=citekey),point_interval="mean_qi", trim=FALSE, expand=FALSE, show.legend = FALSE,adjust = 1.25, density="bounded", point_size=3,scale = 1,alpha=0.5) + 
   geom_point(alpha=0.5,show.legend = F,position = position_jitter(width = .3))+
   #geom_label_repel(size=2,max.overlaps = 50)+
   facet_wrap(dimension~feature_n_complexity)+
   ylab("Correlation Coefficient")+
   xlab("Model Technique")+
-#  scale_y_continuous(limits = c(0,1),expand = c(0.01,0.01))+
+  scale_y_continuous(limits = c(0,1),expand = c(0.01,0.01))+
   geom_text_repel(aes(x = model_class_id, y = values, label = studyREF),
              stat = "summary", fun = mean,show.legend = F)+
   theme_bw()
@@ -469,6 +471,8 @@ tmp <- metaMER_results
 tmp2 <- tmp[which(tmp$statistic=='n'),]
 no_of_classes <- summarise(group_by(tmp2,citekey),first(values))
 print(no_of_classes)
+hist(no_of_classes$`first(values)`)
+
 rm(tmp,tmp2)
 ```
 
@@ -483,6 +487,7 @@ C_studies$stimulus_n[C_studies$stimulus_n==" 429; 350 popular songs + 79 songs f
 C_studies$stimulus_n[C_studies$stimulus_n==" 5192; 12 per user in user validation (not included here due to little information),   AcousticBrainz validation: 60000  "] <- 5192 # resolved
 C_studies$stimulus_n[C_studies$stimulus_n==" ISMIR2012: 2886, NJU_V1: 777, Hindi: 1037  "] <- 2886+777+1037 # decided to take this from validation
 C_studies$stimulus_n[C_studies$stimulus_n==" total: 564; unambiguous: 416, circular validation: 39 "] <- 564 # 
+#table(C_studies$stimulus_n)
 C_studies$stimulus_n <- as.numeric(C_studies$stimulus_n)
   
 ```
@@ -562,16 +567,16 @@ table(C_studies$feature_n)
 
 C_studies$feature_n <- as.numeric(C_studies$feature_n)
 
-print(quantile(C_studies$feature_n,c(0.333,0.666),na.rm = TRUE))
+ggplot(C_studies,aes(x=feature_n))+geom_histogram()
+
+#print(quantile(C_studies$feature_n,c(0.333,0.666),na.rm = TRUE))
 #quantile(R_studies$feature_n,c(0.25,0.50,0.75),na.rm = T)
 
 # Assign
 C_studies$feature_n_complexity <- cut(C_studies$feature_n,
-                                      breaks = c(0,
-                                                 as.numeric(quantile(C_studies$feature_n,c(0.333),na.rm = TRUE)),
-                                                 as.numeric(quantile(C_studies$feature_n,c(0.666),na.rm = TRUE)),
-                                                 1000),
-                                      labels = c("Feature n < 119","Feature n > 119 & < 548","Feature n > 548"))
+                                      breaks = c(0,30,300,
+                                                 10000),
+                                      labels = c("Feature n < 30","Feature n > 30 & < 300","Feature n > 300"))
 table(C_studies$feature_n_complexity)
 ```
 
@@ -589,7 +594,7 @@ tmp$model_class_id<-factor(tmp$model_class_id,
                            levels = c("Neural Nets","Flexible Discriminants", "Kernel Smoothing, Additive and KNN", "Random Forests","Linear Methods"),
                            labels = c("Neural\nNets","Flexible\nDiscriminants", "KS\n & KNN", "Random\nForests", "Linear\nMethods"))
 
-g <- ggplot(tmp,aes(x=model_class_id,y=values,color=citekey,label=citekey))+
+g <- ggplot(tmp,aes(x=model_class_id,y=values,color=citekey,label=citekey,shape=stimulus_genre_mixed))+
   stat_halfeye(aes(fill=citekey),point_interval="mean_qi", trim=FALSE, expand=FALSE, show.legend = FALSE,adjust = 1.25, density="bounded", point_size=3,scale = 1,alpha=0.5) + 
   geom_point(alpha=0.5,show.legend = F,position = position_jitter(width = .3))+
   #geom_label_repel(size=2,max.overlaps = 50)+
