--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -121,8 +121,8 @@ See `analysis/analysis.qmd`
 
 Table 2. Meta-analytic diagnostic for all regression studies predicting valence from audio.
 
-| Concept     | Models, obs|$r$ [95%-CI]            | $t$ | $p$  |$\tau^2$|$I^2$| Prediction interval
-|:------------|:----------|:--------  --------------|:----|:-----|:-----|:------|
+| Concept     | Models, obs|$r$ [95%-CI]            | $t$ | $p$  |$\tau^2$|$I^2$|
+|:------------|:----------|:------------------------|:----|:-----|:-----|:------|
 | Valence All |           | 0.6137 [0.5540; 0.6672] | 15.9|.0001 | 0.092| 98.1% |
 | Valence Trim|           | 0.6048 [0.5920; 0.6172] | 72.4|.0001 | 0.0007| 33.1%|
 | Valence M   |           | 0.6038 [0.4671; 0.7124] | 7.83|.0001 | 0.100| 97.8% |
@@ -139,6 +139,7 @@ Table 2. Meta-analytic diagnostic for all regression studies predicting valence 
 |   FD        |           | 0.xxxx [0.xxxx; 0.xxxx] | xxxx|.xxxx | 0.xxx| XXXX% |
 |   NN        |           | 0.xxxx [0.xxxx; 0.xxxx] | xxxx|.xxxx | 0.xxx| XXXX% |
 |   RF        |           | 0.xxxx [0.xxxx; 0.xxxx] | xxxx|.xxxx | 0.xxx| XXXX% |
+
 
 OTHER GROUPINGS? STIMULUS MIXED/SINGLE GENRE, PREDICTION/EXPLANATION, 
 
@@ -162,9 +163,8 @@ Table 3. Meta-analytic diagnostic for all regression studies predicting arousal 
 | Arousal Trim|            | 0.7932 [0.7846; 0.8014] | 96.5|0.0001|0.0030|73.3%  |
 | Arousal M   |            | 0.7567 [0.6752; 0.8199] | 12.7|0.0001|0.0739|95.6%  |
 | Arousal Md  |            | 0.7627 [0.6819; 0.8252] | 12.7|0.0001|0.0757|95.3%  |
-| Arousal Max | 24,15660   | 0.8070 [0.7453; 0.8550] | 10.3|0.0001|0.155 | 96.8%  | 0.2258; 0.9648
-| Aro.Max.Trm | 14,12061   | 0.8182 [0.8021; 0.8331] | 25.6|0.0001|0.0132| 96.8%  | 0.6372; 0.9047
-
+| Arousal Max | 24,15660   | 0.8070 [0.7453; 0.8550] | 10.3|0.0001|0.155 | 96.8% | 
+| Aro.Max.Trm | 14,12061   | 0.8182 [0.8021; 0.8331] | 25.6|0.0001|0.0132| 96.8% | 
 | *N Features*|            |          |              |     |      |      |       |   
 | <18 F       |            |          |              |     |      |      |       |
 | 18-260 F    |            |          |              |     |      |      |       |
@@ -191,7 +191,7 @@ Table 4. Meta-analytic diagnostic for all classification studies predicting emot
 | Model       | Models, obs|$r$ [95%-CI]             | $t$ | $p$  |$\tau^2$|$I^2$|
 |:------------|:-----------|:------------------------|:----|:-----|:-----|:------|
 | All         | 89,87347   | 0.8074 [0.7681; 0.8407] |21.4 |0.0001|0.2415|99.7%  |
-| All Trim    | 29,6499    | 0.8185 [0.8046; 0.8314] | 58.3|0.0001|0.0066| 60.4%  |
+| All Trim    | 29,6499    | 0.8185 [0.8046; 0.8314] | 58.3|0.0001|0.0066| 60.4% |
 | Max         | 14,17184   | 0.8564 [0.7386; 0.9234] | 8.32|0.0001|0.329 | 99.8% |
 | Max Trim    | 6,3653     | 0.8689 [0.7760; 0.9249] | 11.6|0.0001|0.0749| 97.5% |
 
